# rusty-library-ddd

./: .env.example  CLAUDE.md  Cargo.toml  README.md  claude.md  coderabbit-review.md  cog.toml  docker-compose.yml  justfile
.cargo-husky/hooks/: commit-msg  pre-commit
.github/workflows/: coverage.yml  pr-ci.yml  security-audit.yml
doc/: 01_overview.md  02_domain_model.md  03_context_boundaries.md  04_commands_events.md  05_implementation.md  06_event_sourcing.md  api.md
doc/learning/: 01_copy_trait_and_move_semantics.md  02_functional_ddd_service_pattern.md
doc/phase/: 00_overview.md  01_loan.md
doc/phase/tasks/: 01.md  01_1_loan_state_refactor.md
docs/learning/: port-design-philosophy.md  read-model-save-vs-update.md  send-sync-traits.md  send-sync-vs-kotlin.md
migrations/: 001_create_events.sql  002_create_loans_view.sql
src/: lib.rs  main.rs
src/adapters/: mod.rs
src/adapters/mock/: book_service.rs  member_service.rs  mod.rs  notification_service.rs
src/adapters/postgres/: event_store.rs  loan_read_model.rs  mod.rs  projector.rs
src/api/: error.rs  handlers.rs  mod.rs  router.rs  types.rs
src/application/loan/: errors.rs  loan_service.rs  mod.rs  overdue_detection.rs
src/domain/: commands.rs  errors.rs  events.rs  loan.rs  mod.rs  ports.rs  value_objects.rs
src/ports/: book_service.rs  event_store.rs  loan_read_model.rs  member_service.rs  mod.rs  notification_service.rs
tests/: e2e_test.rs  loan_service_integration_test.rs  postgres_read_model_test.rs
tests/common/: mod.rs
