[package]
name = "rusty-library-ddd"
version = "0.1.0"
edition = "2024"

[dependencies]
uuid = { version = "1.11", features = ["v4", "serde"] }
chrono = { version = "0.4", features = ["serde"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
async-trait = "0.1"
futures = "0.3"
thiserror = "1.0"
sqlx = { version = "0.8", features = ["runtime-tokio", "tls-rustls", "postgres", "uuid", "chrono", "json", "migrate"] }

[dev-dependencies]
cargo-husky = { version = "1", features = ["user-hooks"] }
tokio = { version = "1", features = ["macros", "rt-multi-thread"] }
